added models, global variables
